# VNet

data_converter/: CMakeLists.txt  package.xml
data_converter/include/: mean_shift.h  utils.h
data_converter/src/: data_converter.cpp  mean_shift.cpp  mean_shift_main_example.cpp  rosbag_reader.cpp
scripts/: PointCloudDataset.py  dataloader.py  transf.py  voxel_example.py  voxnet.py
sv_clustering/: CMakeLists.txt  package.xml
sv_clustering/include/: data_transform.h  sv_clustering.h  utils.h
sv_clustering/src/: main.cpp  sv_clustering.cpp
train_data_generator/: CMakeLists.txt  package.xml
train_data_generator/src/: train_data_generator.cpp  utils.h
